What's new...

Jun 23/2021 : JF 32.3 released
  - jfBackup/0.22
    - fix connection issues

May 5/2021 : JF 32.2 released
  - jfNetBoot/0.3
    - moved online help files to github

May 4/2021 : JF 32.1 released
  - jfNetBoot/0.2
    - fixed DHCP pxe proxy mode

May 3/2021 : JF 32.0 released
  - jfNetBoot/0.1
    - PXE Server for Thin clients (Raspberry PI4, x86 UEFI/BIOS systems)
  - jfBackup/0.21
    - added config option to change web port
  - jfSocks/0.7
    - added profiles

Apr 15/2021 : JF 31.0 released
  - jfBackup/0.20
    - added support for drives whose default blocksize is not 64k
  - improved native support by loading native functions into the native launchers
    so the dll/so file is no longer needed in distribution packages (msi/deb)

Jan 14/2021 : jfSOCKS
  - jfSOCKS/0.6
    - added support for IP allowed lists

Dec 2/2020 : jfHexBig
  - created ANSI editor for HexBig

Nov 25/2020 : JF 30.0 released
  - native launchers now select best available concurrent GC
    - for windows this is either Zero or Shenandoah (which is only available in AdoptOpenJDK)
    - for Linux/Mac this is always Zero
  - jfDVR/0.12
    - new native launcher adds support for Windows < 1803

Nov 4/2020 : JF 29.3 released
  - jfBackup/0.19
    - fix tape formatting issues
    - fix client volume mounting issues

Oct 22/2020 : JF 29.2 released
  - jfDataLogger/0.29
    - fix : editing tag descriptions

Oct 20/2020 : JF 29.1 released
  - jfDataLogger/0.28
    - new : added tag descriptions

Oct 14/2020 : JF 29.0 released
  - jfPBX/0.30
    - revamped database (upgrade not possible)
    - many VoIP fixes
  - new : added LLRP client to read/write RFID tags
      using compatible readers (impinj)
  - new : added MQTT service

Sept 28/2020 : JF 28.0 released
  - MODBUS : added support for IR and HR tags
    - jfDataLogger/0.27
    - jfDataLoggerPlus/0.11
    - jfControls/0.8
    - jfDVR/0.11
  - services : set log retention to 30 days
    - jfDNS/0.12
    - jfDHCP/0.11